--- a/プロゲート01.html
+++ b/プロゲート01.html
@@ -2,70 +2,102 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
-    <link rel="stylesheet" href="プロゲート.css">
+    <title>卒業制作7月12日</title>
+    <link rel="stylesheet" href="卒業制作7月12日.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
-      <div class="header-list">
-        <ul>
-          <li>プログラミングとは</li>
-          <li>学べるレッスン</li>
-          <li>お問い合わせ</li>
-        </ul>
-      </div>
+     	<div class="header-title">卒　業　制　作</div>
     </div>
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
-        <h2>プログラミングの世界へようこそ</h2>
+        <h2>○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○</h2>
       </div>
-      <div class="contents">
-        <div class="section-title">
-          <h3>学べるレッスン</h3>
+      <div class="contents1">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-        <div class="contents-item">
-          <img src="mein_03.gif">
-          <p>HTML & CSS</p>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-        <div class="contents-item">
-          <img src="mein_03.gif">
-          <p>PHP</p>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-        <div class="contents-item">
-          <img src="mein_03.gif">
-          <p>Ruby</p>
+        <div class="contents2">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-        <div class="contents-item">
-          <img src="mein_03.gif">
-          <p>Swilf</p>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-      </div>
-      <div class="contact-form">
-        <div class="section-title2-1">
-          <h3>お問い合わせ</h3>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-        <div class="section-title2-2">
-          <p>メールアドレス（必須）</p>
-          <input class="contact-submit-1">
-          <p>お問い合わせ内容（必須）</p>
-          <textarea></textarea>
-          <p>※必須項目は必ずご入力ください</p>
-          <input class="contact-submit-2" type="submit" value="送信">
+        <div class="contents3">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
         </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="footer-logo">Progate</div>
-      <div class="footer-list">
-        <ul>
-          <li>会社概要</li>
-          <li>採用</li>
-          <li>お問い合わせ</li>
-        </ul>
-        
-      </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents4">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents5">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+       </div>
+     </div>
+    <div class="contact-form">
+       <h2>○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○</h2>
     </div>
   </body>
 </html>
